--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">AndroidExercisesUSJ</string>
+    <string name="hint_1" />
+    <string name="hint_2" />
 </resources>
