Exercise finished but app crashes when opening. Idk why.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
-    <string name="app_name">AndroidExercisesUSJ</string>
+    <string name="app_name">AdapterExamples</string>
+    <string name="name">Name</string>
+    <string name="family_name">Family Name</string>
 </resources>
